--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -30,12 +30,12 @@ sites:
     
 skipDeleteIssues: true
 
-# workflowSchedule:
-#   uptime: "*/7 * * * *"        # Uptime checks every 7m
-#   responseTime: "*/7 * * * *"  # Response time recording every 7m
-#   staticSite: "0 * * * *"    # Status page rebuild every hour
-#   summary: "0 * * * *"       # README summary updates every hour
-#   graphs: "0 * * * *"         # Graph generation every hour
+workflowSchedule:
+  uptime: "*/7 * * * *"        # Uptime checks every 7m
+  responseTime: "*/7 * * * *"  # Response time recording every 7m
+  staticSite: "*/21 * * * *"    # Status page rebuild every hour
+  summary: "*/21 * * * *"       # README summary updates every hour
+  graphs: "*/21 * * * *"         # Graph generation every hour
 
 assignees:
   - "SoumyaK4"        
